src/LyricParser.py
# Generated from Lyric.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LyricParser ( Parser ):

    grammarFileName = "Lyric.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'start'", "'stop'", "';'", "'{'", "'}'", 
                     "'release '", "'play '", "'+'", "'-'", "'*'", "'/'", 
                     "'('", "')'", "'loop '", "'repeat '", "'check '", "'here '", 
                     "'there'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "DATA_TYPE", 
                      "IDENT", "DIGIT", "CHAR", "STRING", "CPR_SYMBOL", 
                      "WS" ]

    RULE_program = 0
    RULE_stmtlists = 1
    RULE_stmt = 2
    RULE_expr = 3
    RULE_dec_stmt = 4
    RULE_assign_expr = 5
    RULE_math_expr = 6
    RULE_math_term = 7
    RULE_math_factor = 8
    RULE_loop_stmt = 9
    RULE_repeat_stmt = 10
    RULE_check_stmt = 11
    RULE_else_stmt = 12
    RULE_cpr_expr = 13
    RULE_cpr_term = 14
    RULE_num = 15

    ruleNames =  [ "program", "stmtlists", "stmt", "expr", "dec_stmt", "assign_expr", 
                   "math_expr", "math_term", "math_factor", "loop_stmt", 
                   "repeat_stmt", "check_stmt", "else_stmt", "cpr_expr", 
                   "cpr_term", "num" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    DATA_TYPE=19
    IDENT=20
    DIGIT=21
    CHAR=22
    STRING=23
    CPR_SYMBOL=24
    WS=25

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmtlists(self):
            return self.getTypedRuleContext(LyricParser.StmtlistsContext,0)


        def getRuleIndex(self):
            return LyricParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = LyricParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.match(LyricParser.T__0)
            self.state = 33
            self.stmtlists(0)
            self.state = 34
            self.match(LyricParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtlistsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmtlists(self):
            return self.getTypedRuleContext(LyricParser.StmtlistsContext,0)


        def stmt(self):
            return self.getTypedRuleContext(LyricParser.StmtContext,0)


        def getRuleIndex(self):
            return LyricParser.RULE_stmtlists

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtlists" ):
                return visitor.visitStmtlists(self)
            else:
                return visitor.visitChildren(self)



    def stmtlists(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = LyricParser.StmtlistsContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_stmtlists, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self._ctx.stop = self._input.LT(-1)
            self.state = 41
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = LyricParser.StmtlistsContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_stmtlists)
                    self.state = 37
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 38
                    self.stmt() 
                self.state = 43
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(LyricParser.ExprContext,0)


        def dec_stmt(self):
            return self.getTypedRuleContext(LyricParser.Dec_stmtContext,0)


        def loop_stmt(self):
            return self.getTypedRuleContext(LyricParser.Loop_stmtContext,0)


        def repeat_stmt(self):
            return self.getTypedRuleContext(LyricParser.Repeat_stmtContext,0)


        def check_stmt(self):
            return self.getTypedRuleContext(LyricParser.Check_stmtContext,0)


        def stmtlists(self):
            return self.getTypedRuleContext(LyricParser.StmtlistsContext,0)


        def IDENT(self):
            return self.getToken(LyricParser.IDENT, 0)

        def num(self):
            return self.getTypedRuleContext(LyricParser.NumContext,0)


        def STRING(self):
            return self.getToken(LyricParser.STRING, 0)

        def getRuleIndex(self):
            return LyricParser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = LyricParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmt)
        try:
            self.state = 67
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.expr()
                self.state = 45
                self.match(LyricParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.dec_stmt()
                self.state = 48
                self.match(LyricParser.T__2)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 50
                self.loop_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 51
                self.repeat_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 52
                self.check_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 53
                self.match(LyricParser.T__3)
                self.state = 54
                self.stmtlists(0)
                self.state = 55
                self.match(LyricParser.T__4)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 57
                self.match(LyricParser.T__5)
                self.state = 58
                self.match(LyricParser.IDENT)
                self.state = 59
                self.match(LyricParser.T__2)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 60
                self.match(LyricParser.T__5)
                self.state = 61
                self.num(0)
                self.state = 62
                self.match(LyricParser.T__2)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 64
                self.match(LyricParser.T__5)
                self.state = 65
                self.match(LyricParser.STRING)
                self.state = 66
                self.match(LyricParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(LyricParser.IDENT, 0)

        def assign_expr(self):
            return self.getTypedRuleContext(LyricParser.Assign_exprContext,0)


        def math_expr(self):
            return self.getTypedRuleContext(LyricParser.Math_exprContext,0)


        def cpr_expr(self):
            return self.getTypedRuleContext(LyricParser.Cpr_exprContext,0)


        def getRuleIndex(self):
            return LyricParser.RULE_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = LyricParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expr)
        try:
            self.state = 73
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.match(LyricParser.IDENT)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 70
                self.assign_expr()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 71
                self.math_expr(0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 72
                self.cpr_expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Dec_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DATA_TYPE(self):
            return self.getToken(LyricParser.DATA_TYPE, 0)

        def IDENT(self):
            return self.getToken(LyricParser.IDENT, 0)

        def assign_expr(self):
            return self.getTypedRuleContext(LyricParser.Assign_exprContext,0)


        def getRuleIndex(self):
            return LyricParser.RULE_dec_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDec_stmt" ):
                return visitor.visitDec_stmt(self)
            else:
                return visitor.visitChildren(self)




    def dec_stmt(self):

        localctx = LyricParser.Dec_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_dec_stmt)
        try:
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 75
                self.match(LyricParser.DATA_TYPE)
                self.state = 76
                self.match(LyricParser.IDENT)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.match(LyricParser.DATA_TYPE)
                self.state = 78
                self.assign_expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(LyricParser.IDENT, 0)

        def expr(self):
            return self.getTypedRuleContext(LyricParser.ExprContext,0)


        def getRuleIndex(self):
            return LyricParser.RULE_assign_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign_expr" ):
                return visitor.visitAssign_expr(self)
            else:
                return visitor.visitChildren(self)




    def assign_expr(self):

        localctx = LyricParser.Assign_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assign_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(LyricParser.T__6)
            self.state = 82
            self.match(LyricParser.IDENT)
            self.state = 83
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Math_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def math_term(self):
            return self.getTypedRuleContext(LyricParser.Math_termContext,0)


        def math_expr(self):
            return self.getTypedRuleContext(LyricParser.Math_exprContext,0)


        def getRuleIndex(self):
            return LyricParser.RULE_math_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMath_expr" ):
                return visitor.visitMath_expr(self)
            else:
                return visitor.visitChildren(self)



    def math_expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = LyricParser.Math_exprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_math_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.math_term(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 96
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 94
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        localctx = LyricParser.Math_exprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_math_expr)
                        self.state = 88
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 89
                        self.match(LyricParser.T__7)
                        self.state = 90
                        self.math_term(0)
                        pass

                    elif la_ == 2:
                        localctx = LyricParser.Math_exprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_math_expr)
                        self.state = 91
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 92
                        self.match(LyricParser.T__8)
                        self.state = 93
                        self.math_term(0)
                        pass

             
                self.state = 98
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Math_termContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def math_factor(self):
            return self.getTypedRuleContext(LyricParser.Math_factorContext,0)


        def math_term(self):
            return self.getTypedRuleContext(LyricParser.Math_termContext,0)


        def getRuleIndex(self):
            return LyricParser.RULE_math_term

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMath_term" ):
                return visitor.visitMath_term(self)
            else:
                return visitor.visitChildren(self)



    def math_term(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = LyricParser.Math_termContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_math_term, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.math_factor()
            self._ctx.stop = self._input.LT(-1)
            self.state = 110
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 108
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        localctx = LyricParser.Math_termContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_math_term)
                        self.state = 102
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 103
                        self.match(LyricParser.T__9)
                        self.state = 104
                        self.math_factor()
                        pass

                    elif la_ == 2:
                        localctx = LyricParser.Math_termContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_math_term)
                        self.state = 105
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 106
                        self.match(LyricParser.T__10)
                        self.state = 107
                        self.math_factor()
                        pass

             
                self.state = 112
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Math_factorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def num(self):
            return self.getTypedRuleContext(LyricParser.NumContext,0)


        def math_expr(self):
            return self.getTypedRuleContext(LyricParser.Math_exprContext,0)


        def IDENT(self):
            return self.getToken(LyricParser.IDENT, 0)

        def getRuleIndex(self):
            return LyricParser.RULE_math_factor

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMath_factor" ):
                return visitor.visitMath_factor(self)
            else:
                return visitor.visitChildren(self)




    def math_factor(self):

        localctx = LyricParser.Math_factorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_math_factor)
        try:
            self.state = 119
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21]:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.num(0)
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.match(LyricParser.T__11)
                self.state = 115
                self.math_expr(0)
                self.state = 116
                self.match(LyricParser.T__12)
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 3)
                self.state = 118
                self.match(LyricParser.IDENT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Loop_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(LyricParser.ExprContext,0)


        def stmt(self):
            return self.getTypedRuleContext(LyricParser.StmtContext,0)


        def getRuleIndex(self):
            return LyricParser.RULE_loop_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoop_stmt" ):
                return visitor.visitLoop_stmt(self)
            else:
                return visitor.visitChildren(self)




    def loop_stmt(self):

        localctx = LyricParser.Loop_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_loop_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(LyricParser.T__13)
            self.state = 122
            self.match(LyricParser.T__11)
            self.state = 123
            self.expr()
            self.state = 124
            self.match(LyricParser.T__12)
            self.state = 125
            self.stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Repeat_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(LyricParser.ExprContext,0)


        def stmt(self):
            return self.getTypedRuleContext(LyricParser.StmtContext,0)


        def getRuleIndex(self):
            return LyricParser.RULE_repeat_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRepeat_stmt" ):
                return visitor.visitRepeat_stmt(self)
            else:
                return visitor.visitChildren(self)




    def repeat_stmt(self):

        localctx = LyricParser.Repeat_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_repeat_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(LyricParser.T__14)
            self.state = 128
            self.match(LyricParser.T__11)
            self.state = 129
            self.expr()
            self.state = 130
            self.match(LyricParser.T__12)
            self.state = 131
            self.stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Check_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(LyricParser.ExprContext,0)


        def stmt(self):
            return self.getTypedRuleContext(LyricParser.StmtContext,0)


        def else_stmt(self):
            return self.getTypedRuleContext(LyricParser.Else_stmtContext,0)


        def getRuleIndex(self):
            return LyricParser.RULE_check_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCheck_stmt" ):
                return visitor.visitCheck_stmt(self)
            else:
                return visitor.visitChildren(self)




    def check_stmt(self):

        localctx = LyricParser.Check_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_check_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(LyricParser.T__15)
            self.state = 134
            self.match(LyricParser.T__11)
            self.state = 135
            self.expr()
            self.state = 136
            self.match(LyricParser.T__12)
            self.state = 137
            self.match(LyricParser.T__16)
            self.state = 138
            self.stmt()
            self.state = 140
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 139
                self.else_stmt()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Else_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(LyricParser.StmtContext,0)


        def getRuleIndex(self):
            return LyricParser.RULE_else_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElse_stmt" ):
                return visitor.visitElse_stmt(self)
            else:
                return visitor.visitChildren(self)




    def else_stmt(self):

        localctx = LyricParser.Else_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_else_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(LyricParser.T__17)
            self.state = 143
            self.stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Cpr_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cpr_term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LyricParser.Cpr_termContext)
            else:
                return self.getTypedRuleContext(LyricParser.Cpr_termContext,i)


        def CPR_SYMBOL(self):
            return self.getToken(LyricParser.CPR_SYMBOL, 0)

        def getRuleIndex(self):
            return LyricParser.RULE_cpr_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCpr_expr" ):
                return visitor.visitCpr_expr(self)
            else:
                return visitor.visitChildren(self)




    def cpr_expr(self):

        localctx = LyricParser.Cpr_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_cpr_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.cpr_term()
            self.state = 146
            self.match(LyricParser.CPR_SYMBOL)
            self.state = 147
            self.cpr_term()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Cpr_termContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(LyricParser.IDENT, 0)

        def num(self):
            return self.getTypedRuleContext(LyricParser.NumContext,0)


        def math_expr(self):
            return self.getTypedRuleContext(LyricParser.Math_exprContext,0)


        def getRuleIndex(self):
            return LyricParser.RULE_cpr_term

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCpr_term" ):
                return visitor.visitCpr_term(self)
            else:
                return visitor.visitChildren(self)




    def cpr_term(self):

        localctx = LyricParser.Cpr_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_cpr_term)
        try:
            self.state = 155
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [20]:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self.match(LyricParser.IDENT)
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 2)
                self.state = 150
                self.num(0)
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 3)
                self.state = 151
                self.match(LyricParser.T__11)
                self.state = 152
                self.math_expr(0)
                self.state = 153
                self.match(LyricParser.T__12)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIGIT(self):
            return self.getToken(LyricParser.DIGIT, 0)

        def num(self):
            return self.getTypedRuleContext(LyricParser.NumContext,0)


        def getRuleIndex(self):
            return LyricParser.RULE_num
